# hcdt

./: CHANGELOG.md  LICENSE  LICENSE_CDT.txt  README.md  hcdt.cabal  stack.yaml
.github/workflows/: Stack-lts-Mac.yml  Stack-lts.yml
cpp/: CDT.h  CDTUtils.h  hcdt.cpp  hcdt.hpp
hsc/: Triangulation.hs  Triangulation.hsc  hcdt.hpp
src/: Delaunay.hs  Hcdt.hs  Triangulation.hs  Types.hs  Utils.hs
src/Geometry/: HCDT.hs
src/Geometry/HCDT/: Delaunay.hs  Triangulation.hs  Triangulation.hsc  Types.hs  Utils.hs
