cabal-version:       2.2
name:                hcdt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hcdt#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Types
                     , Triangulation
                     , Delaunay
                     , Hcdt
                     , Utils
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , indexed-traversable
  include-dirs:        cpp
  C-sources:           cpp/hcdt.cpp
  extra-libraries:     stdc++
  ghc-options:         -Wall -optcxx-std=c++11
  other-extensions:    CPP
                     , ForeignFunctionInterface
  cxx-options:         -fPIC -std=c++11
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hcdt
